--- a/data/sources/pjsdc.yaml
+++ b/data/sources/pjsdc.yaml
@@ -31146,9 +31146,9 @@ series:
         dtstart: 2022-09-21 18:00:00+02:00
         dtend: 2022-09-21 20:00:00+02:00
   - meetupcom:
-      meta_description: Chceš do IT, ale nevíš, jaká specializace by ti sedla? Tápeš ve specializacích, které nabízíme? Přemýšlíš, že bys začal/a splácet školné až po kurzu a nástupu do práce? Reg
-      og_title: 'Online informační schůzka: Jak nastartovat kariéru v IT od nuly?, Mon, Oct 17, 2022, 6:00 PM   | Meetup'
-      url: https://www.meetup.com/prague-junior-software-developer-course/events/289084949/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: 'Online informační schůzka: Jak nastartovat kariéru v IT od nuly?'
         description: 'Become a software developer from 0
