--- a/data/sources/frontendisti.yaml
+++ b/data/sources/frontendisti.yaml
@@ -25746,7 +25746,7 @@ series:
 
 
           https://www.meetup.com/frontendisti/events/288945626/'
-        location: Menclova 2538 (Menclova 2538, Praha 8-Palmovka, Czech Republic 180 00)
+        location: Ataccama Software, s.r.o. (Invalidovna, Praha 8, Czech Republic 186 00)
         geo:
           lat: 50.08
           lon: 14.43
@@ -25841,6 +25841,30 @@ series:
         url: https://www.meetup.com/frontendisti/events/289061411/
         dtstart: 2023-02-08 18:00:00+01:00
         dtend: 2023-02-08 20:00:00+01:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: 'Praha: Hospodský sraz - Vzdělávání a začátky FE vývojářů'
+        description: 'Frontendisti.cz
+
+          Wednesday, October 12 at 6:30 PM
+
+
+          **Hospodské srazy jsou zpět!** V Praze se sejdeme v hospodě k neformálnějšímu setkání, zatímco v Brně bude klasický Frontendistí meetup. Na říjnovém h...
+
+
+          https://www.meetup.com/frontendisti/events/288881300/'
+        location: Café Lajka (U Akademie 366/11, Praha 7-Bubeneč, Czech Republic 170 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_288881300@meetup.com
+        url: https://www.meetup.com/frontendisti/events/288881300/
+        dtstart: 2022-10-12 18:30:00+02:00
+        dtend: 2022-10-12 20:30:00+02:00
   - meetupcom:
       meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
       og_title: Login to Meetup | Meetup
