--- a/data/sources/pydata-prague.yaml
+++ b/data/sources/pydata-prague.yaml
@@ -21584,11 +21584,9 @@ series:
         dtstart: 2022-06-27 18:00:00+02:00
         dtend: 2022-06-27 21:00:00+02:00
   - meetupcom:
-      meta_description: 'Hello Python & Data maniacs!
-
-        The 12th Prague PyData meetup will take place at **new [LMC](https://goo.gl/maps/nvaV2vDJh8MneKg5A) offices**. As usual, the talks will start a'
-      og_title: 'PyData Prague #12 - Minutes to a Degree, Tue, Oct 18, 2022, 6:00 PM   | Meetup'
-      url: https://www.meetup.com/pydata-prague/events/288395992/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: 'PyData Prague #12 - Minutes to a Degree'
         description: 'PyData Prague
