--- a/data/sources/typedb-prague.yaml
+++ b/data/sources/typedb-prague.yaml
@@ -11242,11 +11242,9 @@ series:
         dtstart: 2022-09-01 18:30:00+02:00
         dtend: 2022-09-01 19:30:00+02:00
   - meetupcom:
-      meta_description: '**Talk Synopsis**
-
-        TypeDB is a strongly-typed database. It provides a rich and logical type system which breaks down complex problems into meaningful and logical systems, us'
-      og_title: Introduction to TypeDB and TypeQL | A Strongly-Typed Database, Tue, Oct 18, 2022, 6:30 PM   | Meetup
-      url: https://www.meetup.com/typedb-prague/events/288455375/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: Introduction to TypeDB and TypeQL | A Strongly-Typed Database
         description: 'TypeDB Prague Engineers
