--- a/data/sources/datascript-morning-talks.yaml
+++ b/data/sources/datascript-morning-talks.yaml
@@ -26726,14 +26726,9 @@ series:
         dtstart: 2022-09-21 09:00:00+02:00
         dtend: 2022-09-21 10:00:00+02:00
   - meetupcom:
-      meta_description: '**Prosíme Vás o registraci přímo na stránkách Datascriptu:**
-
-        https://www.datascript.cz/morning-talks/navrh-systemu-na-pevnem-zakladu/
-
-
-        V posledních letech se roztrhl pytel '
-      og_title: Návrh systému na pevném základu, Wed, Oct 19, 2022, 9:00 AM   | Meetup
-      url: https://www.meetup.com/morning-talks/events/288152852/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: Návrh systému na pevném základu
         description: 'Morning Talks
