--- a/data/sources/strv.yaml
+++ b/data/sources/strv.yaml
@@ -20357,3 +20357,81 @@ series:
         url: https://www.meetup.com/strv-meetups/events/287714126/
         dtstart: 2022-08-24 18:00:00+02:00
         dtend: 2022-08-24 22:00:00+02:00
+  - meetupcom:
+      meta_description: '**[PLEAES GET YOUR FREE TICKET VIA EVENTBRITE](https://www.eventbrite.com/e/qa-with-android-brn-tickets-444517322277?aff=meetup)**
+
+
+        We’ve got a top view, friendly faces, gr'
+      og_title: Q&A with Android BRN, Tue, Nov 1, 2022, 6:00 PM   | Meetup
+      url: https://www.meetup.com/strv-meetups/events/289205511/
+      ical:
+        summary: Q&A with Android BRN
+        description: 'STRV Meetups
+
+          Tuesday, November 1 at 6:00 PM
+
+
+          **(https://www.eventbrite.com/e/qa-with-android-brn-tickets-444517322277?aff=meetup)** We’ve got a top view, friendly faces, great snacks, cold drinks...
+
+
+          https://www.meetup.com/strv-meetups/events/289205511/'
+        location: STRV (Přízova 284/5, Brno-střed, Czech Republic 602 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_289205511@meetup.com
+        url: https://www.meetup.com/strv-meetups/events/289205511/
+        dtstart: 2022-11-01 18:00:00+01:00
+        dtend: 2022-11-01 22:00:00+01:00
+  - meetupcom:
+      meta_description: '**[PLEASE GET YOUR FREE TICKET VIA EVENTBRITE](https://www.eventbrite.com/e/qa-with-android-prg-tickets-444518766597?aff=meetup)**
+
+
+        We’ve got a top view, friendly faces, gr'
+      og_title: Q&A with Android PRG, Thu, Nov 3, 2022, 6:00 PM   | Meetup
+      url: https://www.meetup.com/strv-meetups/events/289205529/
+      ical:
+        summary: Q&A with Android PRG
+        description: 'STRV Meetups
+
+          Thursday, November 3 at 6:00 PM
+
+
+          **(https://www.eventbrite.com/e/qa-with-android-prg-tickets-444518766597?aff=meetup)** We’ve got a top view, friendly faces, great snacks, cold drinks...
+
+
+          https://www.meetup.com/strv-meetups/events/289205529/'
+        location: STRV Prague (Rohanske nabrezi 678/23, Prague, Czech Republic)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_289205529@meetup.com
+        url: https://www.meetup.com/strv-meetups/events/289205529/
+        dtstart: 2022-11-03 18:00:00+01:00
+        dtend: 2022-11-03 22:00:00+01:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: STRV Design Meetup
+        description: 'STRV Meetups
+
+          Thursday, October 13 at 6:00 PM
+
+
+          **🔥 (https://www.eventbrite.com/e/strv-design-meetup-tickets-429596002207?aff=meetup) 🔥** Curious about how to design an app worthy of an Apple Design...
+
+
+          https://www.meetup.com/strv-meetups/events/288874466/'
+        location: STRV Prague (Rohanske nabrezi 678/23, Prague, Czech Republic)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_288874466@meetup.com
+        url: https://www.meetup.com/strv-meetups/events/288874466/
+        dtstart: 2022-10-13 18:00:00+02:00
+        dtend: 2022-10-13 20:00:00+02:00
