--- a/data/sources/pyvo-praha.yaml
+++ b/data/sources/pyvo-praha.yaml
@@ -8769,12 +8769,9 @@ series:
         dtstart: 2022-05-18 19:00:00+02:00
         dtend: 2022-05-18 23:59:00+02:00
   - meetupcom:
-      meta_description: 'V říjnu se můžete těšit na prezentaci na téma AI Safety and Stampy, a určitě dojde i na lightning talky. Potkáme se v kavárně Lajka v uzavřeném salonku (nahoře).
-
-
-        This mont'
-      og_title: 'Pyvo Prague #137, Wed, Oct 19, 2022, 7:00 PM   | Meetup'
-      url: https://www.meetup.com/pyvo-prague-python-meetup/events/bcxlssydcnbzb/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: 'Pyvo Prague #137'
         description: 'Pyvo: Prague Python Meetup
@@ -9499,14 +9496,14 @@ series:
           We will meet for an informal chat about Python, programming, and more. Details will be added.
 
 
-          https://www.meetup.com/pyvo-prague-python-meetup/events/bcxlssydcpbvb/'
+          https://www.meetup.com/pyvo-prague-python-meetup/events/289217222/'
         location: Prague (, Prague, Czech Republic)
         geo:
           lat: 50.08
           lon: 14.43
         status: CONFIRMED
         uid: event_bcxlssydcpbvb@meetup.com
-        url: https://www.meetup.com/pyvo-prague-python-meetup/events/bcxlssydcpbvb/
+        url: https://www.meetup.com/pyvo-prague-python-meetup/events/289217222/
         dtstart: 2022-11-16 19:00:00+01:00
         dtend: 2022-11-16 23:59:00+01:00
   - meetupcom:
@@ -11340,3 +11337,27 @@ series:
         url: https://www.meetup.com/pyvo-prague-python-meetup/events/288496722/
         dtstart: 2022-09-21 19:00:00+02:00
         dtend: 2022-09-21 23:59:00+02:00
+  - meetupcom:
+      meta_description: We will meet for an informal chat about Python, programming, and more. Details will be added.
+      og_title: 'Pyvo Prague #, Wed, Feb 15, 2023, 7:00 PM   | Meetup'
+      url: https://www.meetup.com/pyvo-prague-python-meetup/events/bcxlssyfcdbtb/
+      ical:
+        summary: 'Pyvo Prague #'
+        description: 'Pyvo: Prague Python Meetup
+
+          Wednesday, February 15 at 7:00 PM
+
+
+          We will meet for an informal chat about Python, programming, and more. Details will be added.
+
+
+          https://www.meetup.com/pyvo-prague-python-meetup/events/bcxlssyfcdbtb/'
+        location: Prague (, Prague, Czech Republic)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_bcxlssyfcdbtb@meetup.com
+        url: https://www.meetup.com/pyvo-prague-python-meetup/events/bcxlssyfcdbtb/
+        dtstart: 2023-02-15 19:00:00+01:00
+        dtend: 2023-02-15 23:59:00+01:00
