--- a/data/sources/datascript-morning-talks.yaml
+++ b/data/sources/datascript-morning-talks.yaml
@@ -28705,3 +28705,27 @@ series:
         url: https://www.meetup.com/morning-talks/events/288152852/
         dtstart: 2022-10-19 09:00:00+02:00
         dtend: 2022-10-19 10:00:00+02:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: Návrh systému na pevném základu
+        description: 'Morning Talks
+
+          Wednesday, October 19 at 9:00 AM
+
+
+          **Prosíme Vás o registraci přímo na stránkách Datascriptu:**https://www.datascript.cz/morning-talks/navrh-systemu-na-pevnem-zakladu/ V posledních lete...
+
+
+          https://www.meetup.com/morning-talks/events/288152852/'
+        location: null
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_288152852@meetup.com
+        url: https://www.meetup.com/morning-talks/events/288152852/
+        dtstart: 2022-10-19 09:00:00+02:00
+        dtend: 2022-10-19 10:00:00+02:00
